# farmaa1.0

./: .gitignore  CHANGELOG_2026-03-17.md  DEPLOYMENT.md  PR_CHECKLIST.md  README.md  implementation_plan.md  problems_and_suggestions.md  project_documentation.md  refactor_auth_and_crops.patch  walkthrough.md
farmaa_backend/: .env.example  .gitignore  Dockerfile  README.md  auth.py  database.py  direct_test.py  full_test.py  init_db.py  main.py  middleware.py  models.py  pyproject.toml  pytest_final.txt  pytest_results.txt  pytest_results2.txt  render.yaml  requirements.txt  schemas.py  supabase_schema.sql  test_api.py  test_for_update.py  trace.txt  update_schema.sql  vercel_test.py  verify.sh
farmaa_backend/migrations/: 003_auth_overhaul.sql  004_auth_overhaul_full.sql  005_farmafix.sql  20260317_001_schema_hardening.sql  20260317_002_rls_policies.sql
farmaa_backend/routers/: __init__.py  ai_router.py  auth_router.py  crops_router.py  market_router.py  orders_router.py
farmaa_backend/supabase/migrations/: 20260227000000_farmaa_schema.sql
farmaa_backend/tests/: conftest.py  test_auth.py  test_crops.py  test_orders.py  test_profile.py
farmaa_mobile/: .analyzer_output.txt  .gitignore  ANDROID_SETUP.md  README.md  WALKTHROUGH.md  analyze_output.txt  analyzer_output.txt  flutter_analyze_output.txt  flutter_analyze_output2.txt  flutter_analyze_output_utf8.txt  flutter_analyze_results2.txt  flutter_run_output.txt  issues.json  pubspec.yaml  results8.txt  results9.txt
farmaafix1/: FIXES_SUMMARY.js  ai_chat_screen.dart  ai_service.dart  auth_router.py  (+3 more)
(+91 files in other folders)
